2008-05-22  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed conditions for using JAVAC.
	* Makefile.in: Regenerated.

2008-05-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed typo.
	* Makefile.in: Regenerated.
	* generated/sun/awt/X11/generator/sizer.32: Regenerated.

2008-05-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated JAVAC calls so ecj wrapper script is used.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* javac.in: Updated to use source 1.6 instead of 1.5.

2008-05-19  Mark Wielaard  <mark@klomp.org>

	* test/jtreg/com/sun/javatest/lib/*.java: Added.
	* .hgignore: Add test/hotspot, test/jdk, test/langtools and
	test/jtreg/classes

2008-05-19  Mark Wielaard  <mark@klomp.org>

	* test/jtreg/*: New jtreg and jtharness sources.
	* Makefile.am (distclean-local): Add clean-jtreg clean-jtreg-reports.
	(.PHONY): Likewise.
	(EXTRA_DIST): Add test/jtreg.
	(stamps/jtreg.stamp): New target.
	(clean-jtreg): Likewise.
	(check-hotspot): Likewise.
	(check-langtools): Likewise.
	(check-jdk): Likewise.
	(clean-jtreg-reports): Likewise.
	(jtregcheck): Likewise.
	(check-local): Likewise.
	(jtreg): Likewise.
	* Makefile.in: Regenerated.

2008-05-16  Mark Wielaard  <mark@klomp.org>

	* patches/icedtea-sparc.patch: Merge os_linux_sparc.cpp patch hunks.

2008-05-15  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-sparc.patch: New.
	* Makefile.am: Add the icedtea-sparc patch.
	* acinclude.m4: Don't default to the zero port on sparc.
	* Makefile.in, configure: Regenerated.

2008-05-14  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/security/CertsInfoPane.java: Fix certificate
	viewer null pointer.

2008-05-09  Mark Wielaard  <mwielaard@redhat.com>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import Gervill fixes from CVS. See CHANGES.txt.
	Check isConversionSupported() in
	AudioFloatFormatConverter.getTargetFormats().