@@ -1,3 +1,8 @@
+2008-05-23  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Updated jtreg to use correct javac and jar.
+	* Makefile.in: Regenerated.
+
 2008-05-22  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am: Fixed conditions for using JAVAC.
